[package]
name = "unipager"
version = "1.0.6-unreleased"
authors = ["Thomas Gatzweiler <mail@thomasgatzweiler.com>"]
edition = "2021"

[dependencies]
log = { version = "^0.4", features = ["std"] }
serial = "^0.4"
ws = "^0.7"
futures = "^0.3"
tiny_http = "^0.12"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
lazy_static = "^1.0"

[dependencies.raspi]
path = "lib/raspi"

[dependencies.hidapi]
version = "0.5.2"
default-features = false
features = ["linux-static-hidraw"] # linux-shared-hidraw will not build
